[gd_scene load_steps=2 format=3 uid="uid://dwubl3q5rsyoj"]

[ext_resource type="Script" path="res://tree_seed_spawner.gd" id="1_3jh2k"]

[node name="TreeSeedSpawner" type="Node2D"]
script = ExtResource("1_3jh2k")

[node name="Boundary1" type="Node2D" parent="."]

[node name="Boundary2" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
